--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         message: message
       };
 
-      fetch('', {
+      fetch('https://github.com/gsuryateja2000/server.git', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
